Fix issue where the icons didnt align

--- a/src/components/TrackCard/style.css
+++ b/src/components/TrackCard/style.css
@@ -26,8 +26,6 @@
 
 .favorites > i {
     color: var(--mdc-theme-text-primary-on-background);
-    height: 32px;
-    width: 32px;
 }
 
 .actionable {
